Overflow stories fix V2

--- a/estilosinsta.css
+++ b/estilosinsta.css
@@ -113,5 +113,4 @@ a {
 }
 .sidebar {
     max-width: 293px;
-    background-color: red;
 }
